k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: distiller-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dev-2020.ensembl.org
      http:
        paths:
          - path: /api/distiller(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: distiller-backend
                port:
                  number: 8000
